# rustbb

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/async_hello/: Cargo.toml
examples/async_hello/src/: main.rs
examples/head/: Cargo.toml
examples/head/src/: main.rs
examples/simple_cat/: Cargo.toml
examples/simple_cat/src/: main.rs
examples/simple_echo/: Cargo.toml
examples/wc/: Cargo.toml
examples/wc/src/: main.rs
rustbb/: Cargo.toml
rustbb/src/: builder.rs  codegen.rs  discovery.rs  fetch.rs  main.rs  transform.rs  util.rs
rustbb/tests/: integration.rs
rustbb_runtime/: Cargo.toml
rustbb_runtime/src/: lib.rs
